src/objects/SlackCommand__c.object
<CustomObject>
    <description>Slack commands sent to the API</description>
    <fields>
        <fullName>Body__c</fullName>
        <description>Raw body contained in the request from Slack</description>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SlackTeamId__c</fullName>
        <label>Slack Team ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlackUserId__c</fullName>
        <label>Slack User ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Slack Command</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>Slack Command Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Commands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>